...
                contentDescription = "cardDetailImage",
                modifier = Modifier.aspectRatio(1f),
                contentScale = ContentScale.Fit
            )
            Icon(
                imageVector = Icons.Default.ArrowBack,
                contentDescription = "backIcon",
                modifier = Modifier
                    .clickable { onNavigateUp() }
                    .padding(MaterialTheme.spacing.view_4x)
            )

            Text(
...
