...
                    imeAction = ImeAction.Search,
                ),
                modifier = Modifier
                    .padding(MaterialTheme.spacing.view_1)
                    .fillMaxWidth()
                    .onFocusChanged { onFocusChanged(it) }
                    .testTag("searchField")
            )
            if (shouldShowHint) {
                Text(
                    text = hint,
                    style = MaterialTheme.typography.body1,
                    fontWeight = FontWeight.Light,
...
