...
    if (!isLoading)
        Box(
            Modifier
                .clickable { onClick() }
                .padding(vertical = MaterialTheme.spacing.view_4x)
                .semantics {
                    contentDescription = "cardItem"
                },
            ) {
            Row(
                horizontalArrangement = Arrangement.Start,
                modifier = Modifier.fillMaxSize(),
                verticalAlignment = Alignment.CenterVertically
...
